# Yet-Another-Password-Manager

./: README.md  cargo.toml  index.html  package-lock.json  package.json
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  database.rs  main.rs  types.rs
src/lib/: AddCard.svelte  Auth.svelte  Card.svelte  CardView.svelte  Main.svelte  Router.svelte  Search.svelte  Store.svelte  VaultView.svelte  Vaults.svelte
src/lib/Dash/: Cloud.svelte  Dashboard.svelte  Magic.svelte  Profile.svelte  Settings.svelte
src/lib/utils/: Card.svelte  Form.svelte  Inputs.svelte  Titlebar.svelte
src/scripts/: API.ts  password.ts  topt.ts  types.ts  utils.ts
src/styles/: global.css  themes.css
yapm_backend/: Cargo.toml
yapm_backend/src/: crypto.rs  db.rs  lib.rs  types.rs  utils.rs
