[package]
name = "yapm_backend"
version = "0.1.0"
edition = "2024"

[dependencies]


rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
aes-gcm = "0.10.3"          # AES-GCM encryption
aes = "0.8"               # Required by aes-gcm
aead = "0.5"              # Trait AES-GCM uses
pbkdf2 = "0.12"           # Key derivation
sha2 = "0.10"             # PBKDF2 hash (SHA512 or SHA256)
rand = "0.9.2"              # Random nonce and salt
 
# bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }



uuid = {version="1.18.1",features = ["v4"]}
anyhow = "1.0.100"